# hypernova

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIP-PARITY.md  Dockerfile  QUALITY.md  README.md  SECURITY.md  VISION.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
clients-java/: README.md
clients/java/: README.md
clients/java/src/main/java/ch/quasarnova/hypernova/: Publisher.java  Registry.java  Subscriber.java  Wire.java
clients/java/src/test/java/ch/quasarnova/hypernova/: GoldenTest.java  LiveLoopTest.java
demo/: README.md  compose.yaml  relay.json  run_demo.sh  verify_demo.py
deploy/: hypernova-registry.service  hypernova-relay.service
doc/: api.md  deployment.md  fx.md  index.md  quickstart.md  security.md
hypernova/: __init__.py  bridge_dip.py  bridge_opcua.py  cli.py  client.py  fx.py  keys.py  relay.py  transport.py  wire.py
hypernova/registry/: __init__.py  listener.py  service.py  store.py  ui.py
interop/: assert_dir1.py  assert_dir2.py  fx_manager_e2e.py  run_fx.sh  run_fx_browser.sh  run_interop.sh  run_interop_arrays.sh  supernova_reader_config.xml
tests/: test_bridge_dip.py  test_bridge_opcua.py  test_client.py  test_fx.py  test_registry.py  test_relay.py  test_review2_findings.py  test_review_findings.py  test_scale_and_ops.py  test_signing_e2e.py  test_wire.py  test_wire_golden.py
tests/golden/: gen_golden.cpp  vectors.json
tests/soak/: run_soak.py
